actualizacion index.html
Se agrego el cuerpo del index.html para poder presentar los proyectos y tecnologias aprendidas a lo largo de la carrera

--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-<h1> GitHub pages</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio de Erick Danilo Armijos Romero</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        section {
+            padding: 2rem;
+            max-width: 1000px;
+            margin: auto;
+            background-color: white;
+            margin-bottom: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 0.5rem;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 1rem;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .project, .technology {
+            margin-bottom: 1rem;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #333;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Portafolio de Erick Danilo Armijos Romero</h1>
+    <p>Correo institucional: edarmijo@espol.edu.ec</p>
+</header>
+
+<section id="proyectos">
+    <h2>Proyectos</h2>
+    <ul>
+        <li class="project">
+            <h3>Proyecto 1: [Nombre del proyecto]</h3>
+            <p>Descripción: [Descripción breve del proyecto]</p>
+            <p>Tecnologías usadas: [Tecnologías]</p>
+            <p>Repositorio: <a href="[URL del repositorio]" target="_blank">Ver en GitHub</a></p>
+        </li>
+        <li class="project">
+            <h3>Proyecto 2: [Nombre del proyecto]</h3>
+            <p>Descripción: [Descripción breve del proyecto]</p>
+            <p>Tecnologías usadas: [Tecnologías]</p>
+            <p>Repositorio: <a href="[URL del repositorio]" target="_blank">Ver en GitHub</a></p>
+        </li>
+        <li class="project">
+            <h3>Proyecto 3: [Nombre del proyecto]</h3>
+            <p>Descripción: [Descripción breve del proyecto]</p>
+            <p>Tecnologías usadas: [Tecnologías]</p>
+            <p>Repositorio: <a href="[URL del repositorio]" target="_blank">Ver en GitHub</a></p>
+        </li>
+    </ul>
+</section>
+
+<section id="tecnologias">
+    <h2>Tecnologías Aprendidas</h2>
+    <ul>
+        <li class="technology">[Tecnología / Framework / Librería 1]: [Uso en proyectos]</li>
+        <li class="technology">[Tecnología / Framework / Librería 2]: [Uso en proyectos]</li>
+        <li class="technology">[Tecnología / Framework / Librería 3]: [Uso en proyectos]</li>
+    </ul>
+</section>
+
+<section id="requerimientos">
+    <h2>Requerimientos</h2>
+    <p>Usuario institucional: edarmijo</p>
+    <p>Contraseña: *********************</p>
+    <p>URL del sitio web desplegado: <a href="[https://kimi2123.github.io/miRepositorio/]" target="_blank">Mi sitio</a></p>
+</section>
+
+<footer>
+    <p>Portafolio desarrollado por Erick Danilo Armijos Romero - ESPOL</p>
+</footer>
+
+</body>
+</html>
